@@ -1,4 +1,8 @@
-﻿drkns 24.01.2016 14:35:53 +0200 - build 4516
+﻿drkns 24.01.2016 20:10:32 +0200 - build 4517
+
+1. Пара уточнений 4516.
+
+drkns 24.01.2016 14:35:53 +0200 - build 4516
 
 1. При попытке открыть две info- или qview панели через главное меню Far падал.
    Причина классическая - экземпляр панели уничтожался в контексте собственных вызовов.
